[package]
name = "lazyarp"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
pnet = "0.35"
pnet_datalink = "0.35"
pnet_packet = "0.35"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
csv = "1.3"
once_cell = "1.21"
chrono = { version = "0.4", features = ["clock"] }
futures = "0.3"
ipnetwork = "0.20"

[profile.release]
lto = true
codegen-units = 1
strip = true
